objects/Implementation_Issues__c.object
<CustomObject>
    <fields>
        <fullName>Is_Issue_Jeopardizing_Production_Date__c</fullName>
        <label>Is Issue Jeopardizing Production Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Manager_Assistance_Needed__c</fullName>
        <label>Is Manager Assistance Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF( Owner:User.Id  == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Post_Implementation_Issue_Applicable__c</fullName>
        <label>Is Post Implementation Issue Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing and Funding</fullName>
                </value>
                <value>
                    <fullName>Clinical (Non- Medical Mangement)</fullName>
                </value>
                <value>
                    <fullName>Data Interface - DIT Area</fullName>
                </value>
                <value>
                    <fullName>Data Interface - Non-DIT Area</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>eBusiness</fullName>
                </value>
                <value>
                    <fullName>Group Services</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>Interplan</fullName>
                </value>
                <value>
                    <fullName>Medical Benefits</fullName>
                </value>
                <value>
                    <fullName>Medical Management</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Pre-Implementation Audit</fullName>
                </value>
                <value>
                    <fullName>Products and Programs</fullName>
                </value>
                <value>
                    <fullName>Telephony</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Resolution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Members_Impacted__c</fullName>
        <label>Number Of Members Impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Issue_Status__c</fullName>
        <label>Overall Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed Non-Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Packages_Impacted_By_Stop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Packages Impacted By Stop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Stop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason For Stop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Should_Issue_Be_On_The_Watchlist__c</fullName>
        <label>Should Issue Be On The Watchlist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_CQ_Or_SSCR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop CQ Or SSCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TPA Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Watchlist Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zzzTxtLong2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>zzzTxtLong2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zzzTxtLong__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>zzzTxtLong</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zzztest1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzztest1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zzztestpickup1__c</fullName>
        <label>zzztestpickup1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Implementation Issues</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Overall_Issue_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Implementation_Issues</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Overall_Issue_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Owner_the_Logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Implementation Issues</label>
    </listViews>
    <nameField>
        <displayFormat>IMPISSUE-{000000}</displayFormat>
        <label>Implementation Issues Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Issues</pluralLabel>
    <recordTypes>
        <fullName>JAA_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>JAA NASCO and WGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <label>Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>National NASCO and WGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>